# spin-ed

./: .gitignore  LICENSE  Makefile  README.md  Setup.hs  Singularity  build_appimage.sh  build_lattice_symmetries.sh  cabal.project  configure  index.html  spin-ed.cabal  stack-8.8.4.yaml  template.yaml
.github/workflows/: ci.yml
app/: Main.hs
example/: heisenberg_chain_10.yaml  heisenberg_chain_24.yaml  heisenberg_chain_4.yaml  heisenberg_chain_40.yaml  heisenberg_chain_42.yaml  heisenberg_kagome_12.yaml  heisenberg_pyrochlore_32.yaml  heisenberg_square_4x4.yaml  heisenberg_square_5x5.yaml  heisenberg_square_6x6.yaml  heisenberg_triangular_19.yaml  xxz_triangular_19.yaml
resources/: SpinED.desktop
spin-ed-talk-2021/: custom.css  index.html
src/: Prelude.hs  SpinED.hs
src/SpinED/: Internal.chs  Internal.hs
test/: Spec.hs
