cabal-version:       2.4
name:                spin-ed
version:             0.0.0.0
synopsis:            User-friendly exact diagonalization for spin systems
description:         User-friendly exact diagonalization for spin systems
license:             BSD-3-Clause
license-file:        LICENSE
author:              Tom Westerhout
maintainer:          Tom Westerhout <14264576+twesterhout@users.noreply.github.com>
copyright:           2020 Tom Westerhout
build-type:          Custom
extra-doc-files:     README.md
tested-with:         GHC == 8.8.4
extra-source-files:  build_lattice_symmetries.sh

flag shared
  description:       Build shared version of lattice_symmetries
  default:           False

custom-setup
  setup-depends: base >= 4.13.0.0 && < 5, Cabal >= 2.4, directory >= 1.2.1

common common-options
  build-depends:       base-noprelude ^>= 4.13.0.0
                     , relude
                     , exceptions
                     , safe-exceptions
                     , mtl
                     , vector
                     , text
                     , aeson
                     , scientific
                     , yaml
                     , co-log
                     , primme-hs
                     , hdf5-hs
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  BangPatterns
                       FlexibleContexts
                       FlexibleInstances
                       TypeFamilies
                       TypeApplications
                       ScopedTypeVariables
                       OverloadedStrings
                       PatternSynonyms
                       RankNTypes
                       GADTs
                       DataKinds
                       MultiParamTypeClasses
                       StandaloneDeriving
                       GeneralizedNewtypeDeriving
                       DeriveAnyClass
                       DerivingStrategies

library
  import:              common-options
  build-tool-depends:  c2hs:c2hs >= 0.28.6
  hs-source-dirs:      src
  exposed-modules:     SpinED
                     , SpinED.Internal
                     , Prelude
  other-modules:       Paths_spin_ed
  extra-libraries:     lattice_symmetries
                     , stdc++
                     , gomp
  ghc-options:         -O2
                       -fexpose-all-unfoldings
                       -fspecialise-aggressively

executable spin-ed
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       spin-ed
                     , optparse-applicative
  ghc-options:         -O2
                       -fexpose-all-unfoldings
                       -fspecialise-aggressively
                       -rtsopts

test-suite spin-ed-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       spin-ed
                     , hspec
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

-- benchmark spin-ed-benchmark
--   import:              common-options
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      benchmark
--   main-is:             Main.hs
--   build-depends:       gauge
--                      , spin-ed
--   ghc-options:         -threaded
--                        -rtsopts
--                        -with-rtsopts=-N
